# biwfant

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: bot_listener.yml  deadline_check.yml  price_watch.yml  run_bot.yml  setup_chat_id.yml  weekly_report.yml
actions/: __init__.py  lineup.py  transfers.py
api/: __init__.py  client.py  models.py
bot/: __init__.py  telegram_bot.py
data/: biwfant.db  store.py
engine/: __init__.py  fixtures.py  llm_advisor.py  market_scanner.py  optimizer.py  scorer.py
scripts/: bot_listener.py  deadline_alert.py  price_watcher.py  run_bot.py  setup_chat_id.py  weekly_report.py
