[project]
name = "biwfant"
version = "0.1.0"
description = "Biwenger fantasy football automation bot — Vampiros United"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "xgboost>=2.0",
    "pulp>=2.8",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "loguru>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "engine", "actions", "bot", "scripts"]
